# data-safety

./: .gitignore
block-buffer/: Cargo.toml
block-buffer/src/: lib.rs
lab1/: Cargo.toml
lab1/src/: block_aligned_buff.rs  cfm.rs  lib.rs  main.rs
lab1/src/simple_swap/: mod.rs  sbox.rs
lab2/: Cargo.toml
lab2/src/: block_aligned_buff.rs  crypt.rs  decrypt.rs  gamma.rs  main.rs  misc.rs  subs.rs  transform.rs
lab3/: Cargo.toml
lab3/src/: key_parsing.rs  main.rs  mics.rs  rabin.rs  rabin_utf8.rs
lab5/: Cargo.toml
lab5/src/: lib.rs  main.rs  my_hasher.rs  sha1.rs
lab5/src/gost/: mod.rs  v256.rs
lab6/: Cargo.toml
lab6/src/: ecpoint.rs  main.rs  signer.rs
