[package]
name = "lab3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
block-buffer = { path = "../block-buffer" }
anyhow = "1.0.75"
num = { version = "0.4.1", features = ["num-bigint"] }
