[package]
name = "lab6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
num = { version = "0.4.1", features = ["num-bigint", "rand"] }
rand = "0.8.5"
lab5 = { path = "../lab5" }
